Completed! will go over the html at some point and make it look nice

--- a/index.html
+++ b/index.html
@@ -24,40 +24,51 @@
             <div class="hero">
                 <div class="hero-1 hero-cta">
                     <h1>Monkey fanpage</h1>
-                    <p>This website is a dedicated fanpage to all kinds of Monke. Small Monke, Big monke, Round Monke, flat Monke.
-                    </p>
+                    <p>This website is a dedicated fanpage to all kinds of Monke. Small Monke, Big monke, Round Monke, flat Monke.</p>
                     <button type="button">Sign Up</button>
                 </div>
                 <div class="hero-1 hero-image">
                 <img src="img/baby-monke.jpeg" alt="shiba">
             </div>
         </div>
-            <div class="title">Information about Monke</div>
+                <div class="title">Information about Monkey</div>
 
                 <div class="boxes">
                     <div class="info">
-                        <img class="box" src="img/bigmonkey.jpeg">
-                        <div class="monke">this is big monke ook ook ook ook!</div>
+                        <img class="box" src="img/monkey1.jpg">
+                        <div class="monke">this is Howard. He thinks a lot.</div>
                     </div>
                     <div class="info">
-                        <img class="box" src="img/small-monkey.jpeg">
-                        <div class="monke">This is small monke ook ook ook ook!</div>
+                        <img class="box" src="img/monkey2.jpg">
+                        <div class="monke">This is Charlie the Chimp. He lost a Banana</div>
                     </div>
                     <div class="info">
-                        <img class="box" src="img/round-monkey.jpeg">
-                        <div class="monke">This is round monke ook ook ook ook!</div>
+                        <img class="box" src="img/monkey3.jpg">
+                        <div class="monke">This is Terry. He's looking for his mum.</div>
                     </div>
                     <div class="info">
-                        <img class="box" src="img/flat-monkey.jpeg">
-                        <div class="monke">This is flat monke ook ook ook ook!</div>
+                        <img class="box" src="img/monkey4.jpg">
+                        <div class="monke">This is Phillip, He's just heard you.</div>
                     </div>
                 </div>
-            </div>
-        
+
         <div class="quote">
             <p>“The monkey didn't help matters any. He was sitting on top of the microbus, just watching the undead plunge to their end. His face appeared so serene, so intelligent, as if he truly understood the situation. I almost wanted him to turn to me and say, 'This is the turning point of the war! We've finally stopped them! We're finally safe!' But instead his little penis popped out and he peed in my face.”</p>
             <b>-Max Brooks.</b>
         </div>
+        
+        <div class="sign-up">
+            <div class="sign-item signs-text">
+            <h3>Call to Action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+        <div class="sign-item signs-button">
+            <button type="button">Sign up</button>
+        </div>
+        </div>
 
+        <div class="footer">
+            <p>Copyright © The Odin Project 2021</p>
+        </div>
     </body>
 </html>
