--- a/index.html
+++ b/index.html
@@ -1,74 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Landing Page!</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-      <div class="container">
-         <nav class="navbar">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page!</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar">
             <div class="header-logo">
                 <img src="img/output-onlinepngtools.png">
             </div>
-                <ul class="links">
-                 <li><a href="#">About</a></li>
-                 <li><a href="#">Shop</a></li>
-                 <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
+            <ul class="links">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+    </div>
+    </nav>
 
-            <div class="hero">
-                <div class="hero-1 hero-cta">
-                    <h1>Monkey fanpage</h1>
-                    <p>This website is a dedicated fanpage to all kinds of Monke. Small Monke, Big monke, Round Monke, flat Monke.</p>
-                    <button type="button">Sign Up</button>
-                </div>
-                <div class="hero-1 hero-image">
-                <img src="img/baby-monke.jpeg" alt="shiba">
-            </div>
+    <div class="hero">
+        <div class="hero-1 hero-cta">
+            <h1>Monkey fanpage</h1>
+            <p>This website is a dedicated fanpage to all kinds of Monke. Small Monke, Big monke, Round Monke, flat
+                Monke.</p>
+            <button type="button">Sign Up</button>
         </div>
-                <div class="title">Information about Monkey</div>
-
-                <div class="boxes">
-                    <div class="info">
-                        <img class="box" src="img/monkey1.jpg">
-                        <div class="monke">this is Howard. He thinks a lot.</div>
-                    </div>
-                    <div class="info">
-                        <img class="box" src="img/monkey2.jpg">
-                        <div class="monke">This is Charlie the Chimp. He lost a Banana</div>
-                    </div>
-                    <div class="info">
-                        <img class="box" src="img/monkey3.jpg">
-                        <div class="monke">This is Terry. He's looking for his mum.</div>
-                    </div>
-                    <div class="info">
-                        <img class="box" src="img/monkey4.jpg">
-                        <div class="monke">This is Phillip, He's just heard you.</div>
-                    </div>
-                </div>
-
-        <div class="quote">
-            <p>“The monkey didn't help matters any. He was sitting on top of the microbus, just watching the undead plunge to their end. His face appeared so serene, so intelligent, as if he truly understood the situation. I almost wanted him to turn to me and say, 'This is the turning point of the war! We've finally stopped them! We're finally safe!' But instead his little penis popped out and he peed in my face.”</p>
-            <b>-Max Brooks.</b>
+        <div class="hero-1 hero-image">
+            <img src="img/pexels-photo-2861847.jpeg" alt="shiba">
         </div>
-        
-        <div class="sign-up">
-            <div class="sign-item signs-text">
+    </div>
+    <div class="title">Information about Monkey</div>
+
+    <div class="boxes">
+        <div class="info">
+            <img class="box" src="img/monkey1.jpg">
+            <div class="monke">this is Howard. He thinks a lot.</div>
+        </div>
+        <div class="info">
+            <img class="box" src="img/monkey2.jpg">
+            <div class="monke">This is Charlie the Chimp. He lost a Banana</div>
+        </div>
+        <div class="info">
+            <img class="box" src="img/monkey3.jpg">
+            <div class="monke">This is Terry. He's looking for his mum.</div>
+        </div>
+        <div class="info">
+            <img class="box" src="img/monkey4.jpg">
+            <div class="monke">This is Phillip, He's just heard you.</div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <p>“The monkey didn't help matters any. He was sitting on top of the microbus, just watching the undead plunge
+            to their end. His face appeared so serene, so intelligent, as if he truly understood the situation. I almost
+            wanted him to turn to me and say, 'This is the turning point of the war! We've finally stopped them! We're
+            finally safe!' But instead his little penis popped out and he peed in my face.”</p>
+        <b>-Max Brooks.</b>
+    </div>
+
+    <div class="sign-up">
+        <div class="sign-item signs-text">
             <h3>Call to Action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there!</p>
-            </div>
+        </div>
         <div class="sign-item signs-button">
             <button type="button">Sign up</button>
         </div>
-        </div>
+    </div>
 
-        <div class="footer">
-            <p>Copyright © The Odin Project 2021</p>
-        </div>
-    </body>
+    <div class="footer">
+        <p>Copyright © The Odin Project 2021</p>
+    </div>
+</body>
+
 </html>
