--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button type="button">Sign Up</button>
         </div>
         <div class="hero-1 hero-image">
-            <img src="img/pexels-photo-2861847.jpeg" alt="shiba">
+            <img src="img/pexels-photo-2861847.jpeg" alt="monkey">
         </div>
     </div>
     <div class="title">Information about Monkey</div>
