--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page!</title>
@@ -13,69 +13,71 @@
     <div class="container">
         <nav class="navbar">
             <div class="header-logo">
-                <img src="img/output-onlinepngtools.png">
+                <img src="img/output-onlinepngtools.png" alt="Header logo">
             </div>
             <ul class="links">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Learning Journal</a></li>
+                <li><a href="#">Tutorial</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
+        </nav>
     </div>
-    </nav>
 
     <div class="hero">
         <div class="hero-1 hero-cta">
-            <h1>Monkey fanpage</h1>
-            <p>This website is a dedicated fanpage to all kinds of Monke. Small Monke, Big monke, Round Monke, flat
-                Monke.</p>
-            <button type="button">Sign Up</button>
+            <h1>Jake Franklin Learning Journal</h1>
+            <p>This website is my dedicated learning journal for my degree at Brighton University. I have some previous
+                experience with self-tutored Web Development using The Odin Project as my guide. However, I am a bit out
+                of practice!</p>
         </div>
         <div class="hero-1 hero-image">
-            <img src="img/pexels-photo-2861847.jpeg" alt="monkey">
-        </div>
-    </div>
-    <div class="title">Information about Monkey</div>
-
-    <div class="boxes">
-        <div class="info">
-            <img class="box" src="img/monkey1.jpg">
-            <div class="monke">this is Howard. He thinks a lot.</div>
-        </div>
-        <div class="info">
-            <img class="box" src="img/monkey2.jpg">
-            <div class="monke">This is Charlie the Chimp. He lost a Banana</div>
-        </div>
-        <div class="info">
-            <img class="box" src="img/monkey3.jpg">
-            <div class="monke">This is Terry. He's looking for his mum.</div>
-        </div>
-        <div class="info">
-            <img class="box" src="img/monkey4.jpg">
-            <div class="monke">This is Phillip, He's just heard you.</div>
+            <img src="img/compsci.jpg" alt="Generic Computer Science Image">
         </div>
     </div>
 
-    <div class="quote">
-        <p>“The monkey didn't help matters any. He was sitting on top of the microbus, just watching the undead plunge
-            to their end. His face appeared so serene, so intelligent, as if he truly understood the situation. I almost
-            wanted him to turn to me and say, 'This is the turning point of the war! We've finally stopped them! We're
-            finally safe!' But instead his little penis popped out and he peed in my face.”</p>
-        <b>-Max Brooks.</b>
+    <div class="blog">
+        <div class="content">
+            <h2>Weekly Blog</h2>
+            <b>Week 2</b>
+            <h3>Publish date: xx xx xxxx</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Enim tortor at auctor urna nunc id cursus metus aliquam. Sit amet dictum sit amet
+                justo donec enim. Euismod quis viverra nibh cras pulvinar mattis nunc sed. Convallis a cras semper
+                auctor neque vitae tempus quam. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi.
+                Ut lectus arcu bibendum at varius vel pharetra. Gravida arcu ac tortor dignissim convallis. Augue eget
+                arcu dictum varius duis. Sed pulvinar proin gravida hendrerit lectus.</p>
+            <ul class="references">
+                <li><a href="#">Reference 1</a></li>
+                <li><a href="#">Reference 2</a></li>
+                <li><a href="#">Reference 3</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <b>Week 1</b>
+            <h3>Publish date: xx xx xxxx</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Enim tortor at auctor urna nunc id cursus metus aliquam. Sit amet dictum sit amet
+                justo donec enim. Euismod quis viverra nibh cras pulvinar mattis nunc sed. Convallis a cras semper
+                auctor neque vitae tempus quam. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi.
+                Ut lectus arcu bibendum at varius vel pharetra. Gravida arcu ac tortor dignissim convallis. Augue eget
+                arcu dictum varius duis. Sed pulvinar proin gravida hendrerit lectus.</p>
+            <ul class="references">
+                <li><a href="#">Reference 1</a></li>
+                <li><a href="#">Reference 2</a></li>
+                <li><a href="#">Reference 3</a></li>
+            </ul>
+        </div>
     </div>
 
-    <div class="sign-up">
-        <div class="sign-item signs-text">
-            <h3>Call to Action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <div class="sign-item signs-button">
-            <button type="button">Sign up</button>
-        </div>
-    </div>
-
-    <div class="footer">
-        <p>Copyright © The Odin Project 2021</p>
-    </div>
+    <footer>
+        <p>
+            Made by Jake Franklin |
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            |
+        </p>
+    </footer>
 </body>
 
 </html>
