--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="timetable">
 
-            <table class="timetable">
+            <table class="centertable">
                 <caption id="timetableCaption">Jake Franklin's Timetable</caption>
                 <thead>
                     <tr>
@@ -333,16 +333,17 @@
             </article> -->
 
         <!-- Footer -->
+    </div>
 
-        <footer id="website-footer">
-            <p>
-                Made by Jake Franklin |
-                <script>
-                    document.write(new Date().getFullYear());
-                </script>
-                |
-            </p>
-        </footer>
+    <footer id="website-footer">
+        <p>
+            Made by Jake Franklin |
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            |
+        </p>
+    </footer>
 </body>
 
 </html>
